--- a/package.json
+++ b/package.json
@@ -1,26 +1,54 @@
 {
   "name": "eigenthresteeguard",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+  "version": "1.0.0",
+  "description": "Web-based data collection and aggregation infrastructure that utilizes secure multi-party computation techniques.",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.4"
+    "amdefine": "^1.0.1",
+    "base32-encode": "^0.1.0",
+    "bignumber.js": "^5.0.0",
+    "body-parser": "^1.17.2",
+    "compression": "^1.7.1",
+    "cross-env": "^5.0.5",
+    "express": "^4.15.3",
+    "forge": "^2.3.0",
+    "greenlock-express": "^2.0.11",
+    "increase-memory-limit": "^1.0.3",
+    "jiff-mpc": "file:jiff",
+    "joi": "^14.3.1",
+    "jquery-deferred": "^0.3.1",
+    "le-acme-core": "^2.1.3",
+    "mathjs": "^5.0.4",
+    "mocha": "^6.1.4",
+    "mongoose": "^4.13.21",
+    "numeric": "^1.2.6",
+    "nunjucks": "^3.1.7",
+    "spdy": "^3.4.7"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
-  }
+    "chai": "^4.2.0",
+    "chromedriver": "^109.0.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-requirejs": "^3.1.1",
+    "selenium-webdriver": "4.0.0-alpha.5"
+  },
+  "scripts": {
+    "start": "node server/index.js",
+    "test": "mocha test/selenium/*.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+"
+  },
+  "author": "Boston University Software & Application Innovation Lab",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/multiparty/web-mpc/issues"
+  },
+  "homepage": "https://github.com/multiparty/web-mpc#readme"
 }
